<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">airbnb</string>
    <string name="title_menu_my_reservation">내 예약</string>
    <string name="title_menu_wish">위시리스트</string>
    <string name="title_menu_search">검색</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_search_title">어디로 여행하세요?</string>
    <string name="label_btn_search_icon">btn_search_icon</string>
    <string name="label_hero_image">hero_image</string>
    <string name="label_search_middle_title">가까운 여행지 둘러보기</string>
    <string name="tempString">tempString</string>
    <string name="whereToGo">어디로 여행하세요?</string>
    <!-- DatePicker -->
    <string name="mtrl_picker_range_header_only_start_selected" tools:override="true">%s - 종료일</string>
    <string name="mtrl_picker_range_header_only_end_selected" tools:override="true">시작일 - %s</string>
    <string name="mtrl_picker_range_header_unselected" tools:override="true">시작일 - 종료일</string>
    <string name="mtrl_picker_save" tools:override="true">저장</string>
    <string name="price_page_jump">건너뛰기</string>
    <string name="price_page_reset">지우기</string>
</resources>